--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,6 +25,9 @@ jobs:
       uses: actions/checkout@v6
       with:
         submodules: true
+        fetch-tags: true
+        fetch-depth: 0
+        filter: tree:0
     - name: Build monitoring image
       run: make image
     - name: Save monitoring image artifact
